force-app/main/default/objects/RWfB_Community__c/RWfB_Community__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for various RWfB code references</description>
    <label>RWfB Community</label>
</CustomObject>