force-app/main/default/objects/RWfB_Community__c/fields/Collapse_Account_Information__c.field-meta.xml
<CustomField>
    <fullName>Collapse_Account_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapse Account Information</label>
    <type>Checkbox</type>
</CustomField>