force-app/main/default/objects/RWfB_Community__c/fields/Collapse_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Collapse_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapse Attachments</label>
    <type>Checkbox</type>
</CustomField>