force-app/main/default/objects/RWfB_Community__c/fields/Collapse_Child_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Collapse_Child_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapse Child Accounts</label>
    <type>Checkbox</type>
</CustomField>