force-app/main/default/objects/RWfB_Community__c/fields/Collapse_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Collapse_Contact_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapse Contact Information</label>
    <type>Checkbox</type>
</CustomField>