force-app/main/default/objects/RWfB_Community__c/fields/Collapse_Credit_and_Billing__c.field-meta.xml
<CustomField>
    <fullName>Collapse_Credit_and_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapse Credit and Billing</label>
    <type>Checkbox</type>
</CustomField>