force-app/main/default/objects/RWfB_Community__c/fields/Collapse_Programs__c.field-meta.xml
<CustomField>
    <fullName>Collapse_Programs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapse Programs</label>
    <type>Checkbox</type>
</CustomField>