force-app/main/default/objects/RWfB_Community__c/fields/Debug_Accordions__c.field-meta.xml
<CustomField>
    <fullName>Debug_Accordions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When TRUE, Accordions are clickable and a user can &apos;jump&apos; sections of the Wizard and Program Summary. When FALSE (default), Accordions are not clickable and a user must user buttons for navigation.</description>
    <inlineHelpText>When TRUE, Accordions are clickable and a user can &apos;jump&apos; sections of the Wizard and Program Summary. When FALSE (default), Accordions are not clickable and a user must user buttons for navigation.</inlineHelpText>
    <label>Debug Accordions</label>
    <type>Checkbox</type>
</CustomField>