force-app/main/default/objects/RWfB_Community__c/fields/Disable_Credit_Applications__c.field-meta.xml
<CustomField>
    <fullName>Disable_Credit_Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When TRUE, Send Credit Applications functionality is disabled for the Community. When FALSE (default), Send Credit Applications are enabled for the Community.</description>
    <inlineHelpText>When TRUE, Send Credit Applications functionality is disabled for the Community. When FALSE (default), Send Credit Applications are enabled for the Community.</inlineHelpText>
    <label>Disable Credit Applications</label>
    <type>Checkbox</type>
</CustomField>