force-app/main/default/objects/RWfB_Community__c/fields/Limited_Use__c.field-meta.xml
<CustomField>
    <fullName>Limited_Use__c</fullName>
    <description>Identify the Profiles that should have limited use for the RWfB Community</description>
    <inlineHelpText>CSV format</inlineHelpText>
    <label>Limited Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>