force-app/main/default/objects/RWfB_Community__c/fields/Max_Filters__c.field-meta.xml
<CustomField>
    <fullName>Max_Filters__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Max Filters</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>