force-app/main/default/objects/RWfB_Community__c/fields/Online_Pricelist_URL_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Online_Pricelist_URL_Prefix__c</fullName>
    <defaultValue>&quot;uat.redwingsafety.com/safety-boots?program=&quot;</defaultValue>
    <description>URL prefix to be applied in conjunction with the Program Id for generating online Pricelist, i.e. uat.redwingsafety.com/safety-boots?program=Id</description>
    <inlineHelpText>URL prefix to be applied in conjunction with the Program Id for generating online Pricelist, i.e. uat.redwingsafety.com/safety-boots?program=Id</inlineHelpText>
    <label>Online Pricelist URL Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>